using jaava 8 compatible feaature